--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "2.4.0",
     "@stripe/stripe-js": "2.2.2",
     "@t3-oss/env-core": "^0.10.1",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@vis.gl/react-google-maps": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
