--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "2.2.2",
     "@t3-oss/env-core": "^0.10.1",
     "@t3-oss/env-nextjs": "^0.11.0",
+    "@types/google.maps": "^3.55.12",
     "@vis.gl/react-google-maps": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
