send message toast

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "jotai": "^2.8.4",
     "lucide-react": "^0.427.0",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "server-only": "0.0.1",
+    "sonner": "^1.5.0",
     "stripe": "14.8.0",
     "tailwind-merge": "^2.5.0",
     "tailwindcss-animate": "^1.0.7",
