--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.3",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@googlemaps/js-api-loader": "^1.16.6",
