--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/backend": "^1.8.0",
     "@clerk/nextjs": "^5.3.3",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -23,6 +25,7 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "googleapis": "^142.0.0",
     "jotai": "^2.8.4",
     "lucide-react": "^0.427.0",
     "next": "latest",
