--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "2.4.0",
     "@stripe/stripe-js": "2.2.2",
+    "@supabase/supabase-js": "^2.45.3",
     "@t3-oss/env-core": "^0.10.1",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@types/google.maps": "^3.55.12",
@@ -36,6 +37,7 @@
     "server-only": "0.0.1",
     "sonner": "^1.5.0",
     "stripe": "14.8.0",
+    "svix": "^1.32.0",
     "tailwind-merge": "^2.5.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
